<resources>
    <string name="app_name" translatable="false">CE-1257218</string>

    <string name="issue_department">Municipal services</string>
    <string name="issue_state">In progress</string>
    <string name="issue_create_title">Created</string>
    <string name="issue_registered_title">Registered</string>
    <string name="issue_solveUp_title">Solve up to</string>
    <string name="issue_responsible_title">Responsible</string>

    <string name="issue_create_value">25 February 2016</string>
    <string name="issue_registered_value">26 February 2016</string>
    <string name="issue_solveUp_value">29 February 2016</string>
    <string name="issue_responsible_value">Dnipropetrovsky MVK()</string>

    <string name="issue_description">
        Open manhole (near billboard).District turning 18 and 19 trams to avenue Mira from Donetsk highway.
    </string>

    <string name="url_photoExample1" translatable="false">http://reklama-city.sk/files/sides/4963bc673810acc041181408487695fb.jpg</string>
    <string name="url_photoExample2" translatable="false">http://kursktv.ru/sites/default/files/styles/galleryformatter_slide/public/lyuk.jpg?itok=8rhtASJb</string>

</resources>
